--- a/AlphabetSoupCharity.ipynb
+++ b/AlphabetSoupCharity.ipynb
@@ -663,11 +663,11 @@
     "# Determine which values to replace if counts are less than ...?\n",
     "#  YOUR CODE GOES HERE\n",
     "# Replace in dataframe\n",
-    "for app in replace_application:\n",
-    "    application_df.APPLICATION_TYPE = application_df.APPLICATION_TYPE.replace(app,\"Other\")\n",
+    "# for app in replace_application:\n",
+    "#     application_df.APPLICATION_TYPE = application_df.APPLICATION_TYPE.replace(app,\"Other\")\n",
     "    \n",
-    "# Check to make sure binning was successful\n",
-    "application_df.APPLICATION_TYPE.value_counts()"
+    "# # Check to make sure binning was successful\n",
+    "# application_df.APPLICATION_TYPE.value_counts()"
    ]
   },
   {
@@ -878,11 +878,11 @@
     "#  YOUR CODE GOES HERE\n",
     "\n",
     "# Replace in dataframe\n",
-    "for cls in replace_class:\n",
-    "    application_df.CLASSIFICATION = application_df.CLASSIFICATION.replace(cls,\"Other\")\n",
+    "# for cls in replace_class:\n",
+    "#     application_df.CLASSIFICATION = application_df.CLASSIFICATION.replace(cls,\"Other\")\n",
     "    \n",
-    "# Check to make sure binning was successful\n",
-    "application_df.CLASSIFICATION.value_counts()"
+    "# # Check to make sure binning was successful\n",
+    "# application_df.CLASSIFICATION.value_counts()"
    ]
   },
   {
@@ -1208,14 +1208,14 @@
    ],
    "source": [
     "# Create a OneHotEncoder instance\n",
-    "enc = OneHotEncoder(sparse=False)\n",
+    "# enc = OneHotEncoder(sparse=False)\n",
     "\n",
-    "# Fit and transform the OneHotEncoder using the categorical variable list\n",
-    "#  YOUR CODE GOES HERE\n",
+    "# # Fit and transform the OneHotEncoder using the categorical variable list\n",
+    "# #  YOUR CODE GOES HERE\n",
     "\n",
-    "# Add the encoded variable names to the dataframe\n",
-    "encode_df.columns = enc.get_feature_names(application_cat)\n",
-    "encode_df.head()"
+    "# # Add the encoded variable names to the dataframe\n",
+    "# encode_df.columns = enc.get_feature_names(application_cat)\n",
+    "# encode_df.head()"
    ]
   },
   {
@@ -2050,7 +2050,7 @@
     "# Define the model - deep neural net, i.e., the number of input features and hidden nodes for each layer.\n",
     "#  YOUR CODE GOES HERE\n",
     "\n",
-    "nn = tf.keras.models.Sequential()\n",
+    "# nn = tf.keras.models.Sequential()\n",
     "\n",
     "# First hidden layer\n",
     "#  YOUR CODE GOES HERE\n",
